@@ -1,4 +1,3 @@
-visual.d lib/partman
 lib lib/partman
 partman bin
 parted_server bin
