@@ -1,3 +1,0 @@
-#!/bin/sh
-
-printf "mountpoint\tMount point\n"
