@@ -1,11 +1,0 @@
-#!/bin/sh
-
-. /lib/partman/lib/base.sh
-
-open_dialog USES_NAMES
-read_line x
-close_dialog
-
-[ "$x" = yes ] || exit 0
-
-printf "name\tName\n"
