@@ -1,11 +1,0 @@
-#!/bin/sh
-
-. /lib/partman/lib/base.sh
-
-open_dialog USES_EXTENDED
-read_line x
-close_dialog
-
-[ "$x" = yes ] || exit 0
-
-printf "type\tType - primary or logical\n"
