@@ -1,0 +1,8 @@
+05 number
+10 type
+15 size
+20 bootable
+25 method
+30 filesystem
+35 name
+40 mountpoint
