@@ -13,4 +13,10 @@ path=$7
 shift; shift; shift; shift; shift; shift; shift
 name=$*
 
-printf " %-12.12s" "$name"
+open_dialog USES_NAMES
+read_line x
+close_dialog
+
+if [ "$x" = yes ]; then
+	printf " %-12.12s" "$name"
+fi
