@@ -13,6 +13,8 @@ partman-base (124) UNRELEASED; urgency=low
     partman/free_space and partman/active_partition to the new format.
   * Enable cdebconf's new column alignment capability.
     Requires cdebconf (>= 0.133).
+  * Remove valid_visuals.d and instead call by their orders all scripts in
+    visual.d.
 
  -- Jérémy Bobbio <lunar@debian.org>  Tue, 29 Jul 2008 15:25:08 +0000
 
